tests/parser/bug_68/test1.m.out
In test1.m, line 9
|     disp("potato");
|     ^^^^ error: expected KEYWORD(end), found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
