tests/parser/bug_68/test1.m
% (c) Copyright 2019 Florian Schanda

classdef test1
  methods
    function obj = test1()
      disp("cons");
    end

    disp("potato");
  end
end
